tentativa de implementacao de ajax

--- a/app/views/medicos/index.html.erb
+++ b/app/views/medicos/index.html.erb
@@ -8,11 +8,11 @@
     <div class="acoes">
     	<fieldset>
     		<select id="acoes" name="acoes">
-    			<option>Ativar selecionados</option>
-    			<option>Desativar selecionados</option>
+    			<option value="1">Ativar selecionados</option>
+    			<option value="2">Desativar selecionados</option>
     		</select>
     		
-    		<a href="#" class="botao">Executar</a>
+    		<a href="javascript:void(0);" class="botao executar_acao_medicos">Executar</a>
     	</fieldset>
     </div>    
     
