--- a/app/views/medicos/_form.html.erb
+++ b/app/views/medicos/_form.html.erb
@@ -1,14 +1,6 @@
 <%= form_for(@medico, :html => { :class => "form"} ) do |f| %>
 	
-	<% if !f.error_messages.empty? %>
-	<div class="flash"> 
-		<div class="message error">
-		  <%=h f.error_messages :header_message => 'Dados inválidos', 
-		  											:message => 'Os seguintes erros ocorreram:', 
-		  											:header_tag => :h3 %>
-		</div>
-	</div>
-	<% end %>
+	<%= render :partial => 'shared/erros', :locals => { :f => f } %>
 
 	<fieldset class="cadastro">
 		<label>Nome*:</label>
