--- a/app/views/convenios/show.html.erb
+++ b/app/views/convenios/show.html.erb
@@ -1,25 +1,21 @@
+<% content_for :js do %>
+$(document).ready(function(){
+		$("#tabs").tabs();
+});
+<% end %>
+
 <% content_for :conteudo do %>
-	
-	<script type="text/javascript" language="javascript">
-		$(document).ready(function(){
-				$("#tabs").tabs();
-		});
-	</script>
-	
 	<div class="block" id="block">
 		<div class="content">
-		
+			<%= render :partial => 'shared/avisos' %>
 			<div id="tabs">
 				
 				<ul>
-					<li><a href="#dados_gerais">Dados Gerais</a></li>
+					<li><a href="#">Dados Gerais</a></li>
 					<li><a href="#servicos">Tabela de Serviços</a></li>
 				</ul>
-				
-				<!-- INÍCIO DADOS GERAIS -->
-				<div id="dados_gerais">
-					<%= render :partial => 'shared/avisos' %>
-				
+
+				<div id="servicos">
 		   		<h2 class="title"><%=h @convenio.nome %></h2>
 					<div class="inner exibicao_dados">
 			  		<div class="info">
@@ -70,92 +66,9 @@
 					    <% end %>
 					  </div>
 					  
-					</div>		
-				</div>
-				<!-- FIM DADOS GERAIS -->
-			
-				<!-- INÍCIO SERVIÇOS -->
-				<div id="servicos">
-					<h2 class="title"><%=h @convenio.tabela.nome %></h2>	
-					
-					<div class="inner exibicao_dados">
-						<div class="info">
-							<p>
-								<span class="descricao">Valor CH:</span>R$ <%=h @convenio.valor_ch %>
-				  		</p>
-						</div>	
-					
-						<div class="descricao_tabela">
-							<h3>Exceções de Serviços</h3>
-							<a href="#" class="botao">Adicionar Exceção</a>
-						</div>
-						<% if(@convenio.excecoesdeservicos.size > 0)%>
-						<table class="table"> 
-							<tr>
-								<th class="first"></th> 
-								<th>Serviço</th> 
-								<th>Valor CH</th> 
-								<th>Valor Bruto</th>
-								<th class="last">&nbsp;</th> 
-							</tr>
-							<tr class="odd"> 
-								<td>&nbsp;</td>
-								<td>Aplicação de Soro</td> 
-								<td>13</td> 
-								<td>R$ 20,00</td>
-								<td><a href="#" onclick="return confirm('Deseja realmente deletar essa exceção?')"/>deletar</a></td> 
-							</tr> 
-							<tr class="even"> 
-								<td>&nbsp;</td>
-								<td>Engessar braço</td> 
-								<td>25</td> 
-								<td>R$ 43,00</td>
-								<td><a href="#" onclick="return confirm('Deseja realmente deletar essa exceção?')"/>deletar</a></td> 
-							</tr>  
-						</table>						
-						<% else %>
-						<div class="info">Não há exceções para valores de serviços!</div>
-						<% end%>
-					
-						<div class="descricao_tabela">
-							<h3>Exceções de Materiais</h3>
-							<a href="#" class="botao">Adicionar Exceção</a>
-						</div>
-						
-						<% if(@convenio.excecoesdemateriais.size > 0)%>						
-						<table class="table"> 
-							<tr>
-								<th class="first"></th> 
-								<th>Material</th> 
-								<th>Valor CH</th> 
-								<th>Valor Bruto</th>
-								<th class="last">&nbsp;</th> 
-							</tr>
-							<tr class="odd"> 
-								<td>&nbsp;</td>
-								<td>Gesso</td> 
-								<td>2</td> 
-								<td>R$ 3,00</td>
-								<td><a href="#" onclick="return confirm('Deseja realmente deletar esse material?')"/>deletar</a></td> 
-							</tr> 
-							<tr class="even"> 
-								<td>&nbsp;</td>
-								<td>Algodão</td> 
-								<td>1</td> 
-								<td>R$ 1,50</td>
-								<td><a href="#" onclick="return confirm('Deseja realmente deletar esse material?')"/>deletar</a></td> 
-							</tr>  
-						</table>
-						<% else %>
-						<div class="info">Não há exceções para valores de materiais!</div>
-						<% end%>
-					
 					</div>
 				</div>
-				<!-- FIM SERVIÇOS -->
-			
 			</div>
-			
 		</div>
 	</div>
 <% end -%>
