--- a/app/views/convenios/show.html.erb
+++ b/app/views/convenios/show.html.erb
@@ -12,7 +12,9 @@ $(document).ready(function(){
 				
 				<ul>
 					<li><a href="#">Dados Gerais</a></li>
-					<li><a href="#servicos">Tabela de Serviços</a></li>
+					<li><a href="#">Tabela de serviços</a></li>
+					<li><a href="#servicos">Exceções de serviços</a></li>
+					<li><a href="#servicos">Exceções de materiais</a></li>
 				</ul>
 
 				<div id="servicos">
