--- a/app/views/excecoesdeservicos/index.html.erb
+++ b/app/views/excecoesdeservicos/index.html.erb
@@ -22,7 +22,9 @@ function deletar(id) {
 				
 				<ul>
 					<li><a href="#">Dados Gerais</a></li>
-					<li><a href="#servicos">Tabela de Serviços</a></li>
+					<li><a href="#">Tabela de serviços</a></li>
+					<li><a href="#servicos">Exceções de serviços</a></li>
+					<li><a href="#servicos">Exceções de materiais</a></li>
 				</ul>
 				
 				<!-- INÍCIO SERVIÇOS -->
