excecao de material

--- a/app/views/convenios/show.html.erb
+++ b/app/views/convenios/show.html.erb
@@ -14,7 +14,7 @@ $(document).ready(function(){
 					<li><a href="#">Dados Gerais</a></li>
 					<li><a href="#">Tabela de serviços</a></li>
 					<li><a href="#servicos">Exceções de serviços</a></li>
-					<li><a href="#servicos">Exceções de materiais</a></li>
+					<li><a href="#materiais">Exceções de materiais</a></li>
 				</ul>
 
 				<div id="servicos">
