--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -389,3 +389,7 @@ ul.list li .left  {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+
+.deactivated-item {
+	text-decoration: line-through;
+}
