--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -393,3 +393,46 @@ ul.list li .left  {
 .deactivated-item {
 	text-decoration: line-through;
 }
+
+/* fieldsets */
+
+.cadastro label {
+	clear: both;
+	display: block;
+	font-size: 1.2em;
+  padding: 5px 0 2px;  
+  font-weight: bold;
+}
+
+.cadastro input {
+	width: 91.5%!important;
+}
+
+.cadastro textarea {
+	width: 91.5%!important;
+	height: 200px;
+} 
+
+.cadastro input.medio {
+	width: 48%!important;
+}
+
+.agrupar_campos {
+	float: left;
+	width: 48%;	
+}
+
+.agrupar_campos input {
+	width: 90%!important;
+}
+
+.botoes {
+	margin: 20px 0 0;
+}
+
+.description {
+	clear:both;
+	display:block;
+  color:#aaa;
+  font-family:Georgia, serif;
+}
