--- a/WebContent/stylesheets/base.css
+++ b/WebContent/stylesheets/base.css
@@ -24,13 +24,19 @@ hr {height: 1px; border: 0; }
 p { margin: 15px 0;}
 a img { border: none; }
 
+html, body, #container{
+  height: 100%;
+}
+
 body {
   font-size: 12px;
   font-family: sans-serif;  
 }
 
 #container {
-  min-width: 960px;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 #header, #wrapper {
@@ -110,11 +116,19 @@ body {
 }
 
 #main .block .content .inner {
-  padding: 0 15px 15px;  
+  padding: 0 15px 15px; 
 }
+
+.tables .inner{float: left;}
 
 #main .main p.first {
   margin-top: 0;
+}
+
+.service-rules, .material-rules{
+	clear: both;
+	margin: 0 auto 10px;
+	width: 97%;
 }
 
 #user-navigation {
@@ -173,7 +187,7 @@ body {
   padding-bottom: 5px;
   text-align:center;
   bottom:0;
-  position: absolute;
+  position: fixed;
   height: 20px;
   width: 100%;
 }
@@ -223,7 +237,7 @@ body {
 }
 
 .table td {
-  padding: 10px;
+  padding: 5px;
 }
 
 .table td.last {
