--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -66,6 +66,12 @@ input.checkbox {
   background: #fff;
 }
 
+.dados {
+	float:left;
+	padding:0 20px 10px 0;
+	width:980px;
+}
+
 #main .block h2.title {
   margin: 10px 0 5px 0;
   background-color: none;
