--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -429,7 +429,7 @@ ul.list li .left  {
 	margin: 3px 0;
 }
 
-.agrupar_campos input {
+.agrupar_campos input, .agrupar_campos select {
 	width: 90%!important;
 }
 
@@ -472,12 +472,9 @@ p.info {
 	margin-bottom: 10px;
 }
 
-.agenda .topo .hoje, .agenda .topo .filtros {
-	float: left;
-}
-
 .agenda .topo .hoje {
-	width: 10%;	
+	width: 10%;
+	float: left;
 }
 
 .agenda .topo .hoje .mes {
@@ -501,6 +498,8 @@ p.info {
 
 .agenda .topo .filtros {
 	margin-left: 5px;
+	width: 63%;
+	float: right;
 }
 
 .agenda .compromissos, .agenda .calendario {
@@ -511,6 +510,12 @@ p.info {
 	width: 75%;
 }
 
+.agenda .compromissos .acoes {
+	float:right;
+	margin:0 34px;
+	padding:5px;
+}
+
 .agenda .compromissos .table {
 	width: 95%;
 }
@@ -518,5 +523,101 @@ p.info {
 .agenda .calendario {
 	width: 25%;
 }
+
+fieldset.busca label {
+	padding: 0 0 2px;
+	font-size: 12px;
+	font-weight: normal;
+}
+
+fieldset.busca input, fieldset.busca select {
+	width: 42% !important;
+	float: left;
+	margin-right: 5px;
+}
+
+fieldset.busca .button {
+	margin: -5px 0 0;
+}
+
+tr.disponivel {
+	background-color: #9CEDAC;
+}
+
+tr.indisponivel {
+	background-color: #FF575A;
+}
+
+tr.current {
+	background-color: #A3AFBB;
+}
+
+.legenda li {
+	font-size: 11px;
+}
+
+.legenda li span {
+	display: inline-block;
+	height: 6px;
+	width: 6px;
+	margin-right: 5px;
+}
+
+.legenda li .vermelho {
+	background-color: #FF575A;
+}
+
+.legenda li .azul {
+	background-color: #A3AFBB;
+}
+
+.legenda li .verde {
+	background-color: #9CEDAC;
+}
+
+div.compromissos .filtros {
+	margin: 5px 0;
+}
+
+div.agendamento {
+	background-color: #ffffff;
+	padding: 15px 20px;
+	position: relative;
+	width: 400px;
+}
+
+.btn_fechar {
+	position: absolute;
+	top: 3px;
+	right: 3px;
+	padding: 5px 8px;
+	background: #576C82;
+	color: #ffffff!important;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+fieldset.cadastro .paciente {
+	width: 100%;
+	float: left;
+}
+
+fieldset.cadastro .paciente input {
+	float: left;
+}
+
+fieldset.cadastro .paciente input[type='text'] {
+	width: 80%!important;
+	margin-right: 5px;
+}
+
+fieldset.cadastro .paciente .button {
+	margin: -5px 0 0;
+}
 /* FIM AGENDA */
 
+/* INÍCIO MODAL */
+.modal{display:none;}
+#simplemodal-overlay{background-color:#000;z-index:9999px!important;}
+.simplemodal-container{top:150px!important;}
+/* FIM MODAL */
