--- a/WebContent/stylesheets/base.css
+++ b/WebContent/stylesheets/base.css
@@ -24,7 +24,7 @@ hr {height: 1px; border: 0; }
 p { margin: 15px 0;}
 a img { border: none; }
 
-html, body, #container{
+#container{
   height: 100%;
 }
 
