--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -673,3 +673,12 @@ fieldset.cadastro .paciente .button {
 .procedure ul li a{float:left;}
 
 /* FIM APPOINTMENT */
+span.label-retorno {
+	background-color: #6492AC;
+	color: white;
+	display: inline;
+	font-size: 10px;
+	padding: 3px 4px;
+	white-space: nowrap;
+	width: 50px;
+}
