--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -100,28 +100,29 @@ body{font:12px/1.5em "Lucida Grande","Helvetica Neue",Arial,sans-serif;backgroun
 .main .content .box .boxcontent hr{background:#AAAAAA;border:0 none;height:1px;}
 
 /*BOX TABELA GERAL ######################################################################################################################*/
-table{float:left;width:100%;border:none; margin-top: 10px;}
-table tr.tableheader th, .main .content .box form table tr.tableheader td{background:#576C82;color:#FFFFFF;font-weight:bold;padding:3px;text-align:center;text-transform:uppercase;}
-table tr td{text-align:left;padding:8px; border-bottom:#efefef 1px solid;}
-table tr.boxdivisortable td{padding:0;border:none;}
-table tr td a{background-color:#EEEEEE;background-repeat:no-repeat;background-position:10px 5px;border:1px solid #BFBFBF;color:#222222;cursor:pointer;float:left;font-size:1em;font-weight:bold;line-height:1.3em;margin:0 7px 0 0;padding:5px 10px 5px 25px;text-decoration:none;}
-table tr td a:hover{background-color:#dfdfde;}
-table tr td a.btnpeopleedit{background-image:url(/easyclinica/images/icons/pencil.png);}
-table tr td a.btnpeopleshow{background-image:url(/easyclinica/images/icons/vcard.png);}
-table tr td a.btnpeopleenable{background-image:url(/easyclinica/images/icons/user_green.png);}
-table tr td a.btnpeopledisable{background-image:url(/easyclinica/images/icons/user_grayoff.png);}
+table.easy{float:left;width:100%;border:none; margin-top: 10px;}
+table.easy tr.tableheader th, .main .content .box form table tr.tableheader td{background:#576C82;color:#FFFFFF;font-weight:bold;padding:3px;text-align:center;text-transform:uppercase;}
+table.easy tr td{text-align:left;padding:8px; border-bottom:#efefef 1px solid;}
+table.easy tr.boxdivisortable td{padding:0;border:none;}
+table.easy tr td a{background-color:#EEEEEE;background-repeat:no-repeat;background-position:10px 5px;border:1px solid #BFBFBF;color:#222222;cursor:pointer;float:left;font-size:1em;font-weight:bold;line-height:1.3em;margin:0 7px 0 0;padding:5px 10px 5px 25px;text-decoration:none;}
+table.easy tr td a:hover{background-color:#dfdfde;}
+table.easy tr td a.btnpeopleedit{background-image:url(/easyclinica/images/icons/pencil.png);}
+table.easy tr td a.btnpeopleshow{background-image:url(/easyclinica/images/icons/vcard.png);}
+table.easy tr td a.btnpeopleenable{background-image:url(/easyclinica/images/icons/user_green.png);}
+table.easy tr td a.btnpeopledisable{background-image:url(/easyclinica/images/icons/user_grayoff.png);}
 
-table tr td.statusenable{background:transparent url(/easyclinica/images/icons/user_green.png) center no-repeat;text-indent:-9999px;}
-table tr td.statusdisable{background:transparent url(/easyclinica/images/icons/user_grayoff.png) center no-repeat;text-indent:-9999px;}
-table tr td.namedisable{text-decoration:line-through;}
-table tr td a.last{margin:0;}
-table tr td.tablenostyle{background:#ffffff!important;border:none;}
+table.easy tr td.statusenable{background:transparent url(/easyclinica/images/icons/user_green.png) center no-repeat;text-indent:-9999px;}
+table.easy tr td.statusdisable{background:transparent url(/easyclinica/images/icons/user_grayoff.png) center no-repeat;text-indent:-9999px;}
+table.easy tr td.namedisable{text-decoration:line-through;}
+table.easy tr td a.last{margin:0;}
+table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 
 /*BOX TABELA PROCEDIMENTOS ######################################################################################################################*/
 .main .content .box form{float:left;width:100%;}
 .main .content .box form table.tableprocedures{float:left;width:100%;border:none;}
 .main .content .box form table.tableprocedures tr.tableheader th, .main .content .box form table.tableprocedures tr.tableheader td{background:#576C82;color:#FFFFFF;font-weight:bold;padding:3px;text-align:center;text-transform:uppercase;}
 .main .content .box form table.tableprocedures tr td{text-align:left;padding:8px; border-bottom:#efefef 1px solid;}
+.main .content .box form table.tableprocedures tr td.center{text-align:center;}
 .main .content .box form table.tableprocedures tr.boxsubtotal td{background:#efefef;font-weight:bold;padding:0 8px;text-transform:uppercase;border:none;}
 .main .content .box form table.tableprocedures tr.boxdivisortable td{padding:0;border:none;}
 .main .content .box form table.tableprocedures tr.boxtotal{padding:20px 0 0 0;}
@@ -130,6 +131,9 @@ table tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box form table.tableprocedures tr td a:hover{background-color:#dfdfde;}
 .main .content .box form table.tableprocedures tr td a.btndelete{background-image:url(/easyclinica/images/icons/delete.png);}
 .main .content .box form table.tableprocedures tr td a.last{margin:0;}
+.main .content .box form table.tableprocedures tr td input{float:left;width:200px;padding:4px 6px;border-color:#CCCCCC #DDDDDD #DDDDDD #CCCCCC;border-right:1px solid #DDDDDD;border-style:solid;border-width:2px 1px 1px 2px;}
+.main .content .box form table.tableprocedures tr td input.qty{width:33px}
+.main .content .box form table.tableprocedures tr td input.amount{width:60px}
 .main .content .box form table tr td.tablenostyle{background:#ffffff!important;border:none;}
 
 /*BOX BOTOES ######################################################################################################################*/
