--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -119,22 +119,22 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 
 /*BOX TABELA PROCEDIMENTOS ######################################################################################################################*/
 .main .content .box form{float:left;width:100%;}
-.main .content .box form table.tableprocedures{float:left;width:100%;border:none;}
-.main .content .box form table.tableprocedures tr.tableheader th, .main .content .box form table.tableprocedures tr.tableheader td{background:#576C82;color:#FFFFFF;font-weight:bold;padding:3px;text-align:center;text-transform:uppercase;}
-.main .content .box form table.tableprocedures tr td{text-align:left;padding:8px; border-bottom:#efefef 1px solid;}
-.main .content .box form table.tableprocedures tr td.center{text-align:center;}
-.main .content .box form table.tableprocedures tr.boxsubtotal td{background:#efefef;font-weight:bold;padding:0 8px;text-transform:uppercase;border:none;}
-.main .content .box form table.tableprocedures tr.boxdivisortable td{padding:0;border:none;}
-.main .content .box form table.tableprocedures tr.boxtotal{padding:20px 0 0 0;}
-.main .content .box form table.tableprocedures tr.boxtotal td{padding:0 8px;border:none;text-transform:uppercase;font-weight:bold;}
-.main .content .box form table.tableprocedures tr td a{background-color:#EEEEEE;background-repeat:no-repeat;background-position:10px 5px;border:1px solid #BFBFBF;color:#222222;cursor:pointer;float:left;font-size:1em;font-weight:bold;line-height:1.3em;margin:0 7px 0 0;padding:5px 10px 5px 35px;text-decoration:none;}
-.main .content .box form table.tableprocedures tr td a:hover{background-color:#dfdfde;}
-.main .content .box form table.tableprocedures tr td a.btndelete{background-image:url(/easyclinica/images/icons/delete.png);}
-.main .content .box form table.tableprocedures tr td a.last{margin:0;}
-.main .content .box form table.tableprocedures tr td input{float:left;width:200px;padding:4px 6px;border-color:#CCCCCC #DDDDDD #DDDDDD #CCCCCC;border-right:1px solid #DDDDDD;border-style:solid;border-width:2px 1px 1px 2px;}
-.main .content .box form table.tableprocedures tr td input.qty{width:33px}
-.main .content .box form table.tableprocedures tr td input.amount{width:60px}
-.main .content .box form table tr td.tablenostyle{background:#ffffff!important;border:none;}
+.main .content .box table.tableprocedures{float:left;width:100%;border:none;}
+.main .content .box table.tableprocedures tr.tableheader th, .main .content .box table.tableprocedures tr.tableheader td{background:#576C82;color:#FFFFFF;font-weight:bold;padding:3px;text-align:center;text-transform:uppercase;}
+.main .content .box table.tableprocedures tr td{text-align:left;padding:8px; border-bottom:#efefef 1px solid;}
+.main .content .box table.tableprocedures tr td.center{text-align:center;}
+.main .content .box table.tableprocedures tr.boxsubtotal td{background:#efefef;font-weight:bold;padding:0 8px;text-transform:uppercase;border:none;}
+.main .content .box table.tableprocedures tr.boxdivisortable td{padding:0;border:none;}
+.main .content .box table.tableprocedures tr.boxtotal{padding:20px 0 0 0;}
+.main .content .box table.tableprocedures tr.boxtotal td{padding:0 8px;border:none;text-transform:uppercase;font-weight:bold;}
+.main .content .box table.tableprocedures tr td a{background-color:#EEEEEE;background-repeat:no-repeat;background-position:10px 5px;border:1px solid #BFBFBF;color:#222222;cursor:pointer;float:left;font-size:1em;font-weight:bold;line-height:1.3em;margin:0 7px 0 0;padding:5px 10px 5px 35px;text-decoration:none;}
+.main .content .box table.tableprocedures tr td a:hover{background-color:#dfdfde;}
+.main .content .box table.tableprocedures tr td a.btndelete{background-image:url(/easyclinica/images/icons/delete.png);}
+.main .content .box table.tableprocedures tr td a.last{margin:0;}
+.main .content .box table.tableprocedures tr td input{float:left;width:200px;padding:4px 6px;border-color:#CCCCCC #DDDDDD #DDDDDD #CCCCCC;border-right:1px solid #DDDDDD;border-style:solid;border-width:2px 1px 1px 2px;}
+.main .content .box table.tableprocedures tr td input.qty{width:33px}
+.main .content .box table.tableprocedures tr td input.amount{width:60px}
+.main .content .box table tr td.tablenostyle{background:#ffffff!important;border:none;}
 
 /*BOX BOTOES ######################################################################################################################*/
 .boxactions{float:left;width:100%;background-color:#EEEEEE; border:#EEEEEE 1px solid;font-size:14px;padding:10px 0;margin:10px 0;}
@@ -320,5 +320,11 @@ div.error {
 .modal-pacientes .modal-content p{float:left;width:143px;font-weight: bold;}
 .modal-pacientes .modal-content span{float:left;}
 .modal-pacientes .modal-content div.observations p {width: 100%;}
+
+.dados-consulta{float:left;padding:0 20px;text-align:left;margin-bottom: 15px;}
+.dados-consulta div {float:left; width: 100%;margin-top:5px;}
+.dados-consulta p{float:left;width:135px!important;margin:0!important;font-weight: bold;}
+.dados-consulta span{float:left;}
+.dados-consulta div.observations p {width: 100%;}
 /*END MODAL ######################################################################################################################*/
 
