--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -275,6 +275,18 @@ div.error {
     padding: 4px 10px 4px 25px;
 }
 
+.procedures div.error {
+	left: 533px;
+    position: absolute;
+    top: 457px;
+    width: 255px!important;
+}
+
+.procedures div.error p {
+	color: #000000!important;
+    font-size: 11px!important;
+}
+
 /*END CONTENT ######################################################################################################################*/
 
 /*START FOOTER ######################################################################################################################*/
