--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -111,6 +111,7 @@ table.easy tr td a.btnpeopleshow{background-image:url(/easyclinica/images/icons/
 table.easy tr td a.btnpeopleenable{background-image:url(/easyclinica/images/icons/user_green.png);}
 table.easy tr td a.btnpeopledisable{background-image:url(/easyclinica/images/icons/user_grayoff.png);}
 table.easy tr td a.btnappointments{background-image:url(/easyclinica/images/icons/appointments.png);}
+table.easy tr td a.btnschedule{background-image:url(/easyclinica/images/icons/schedule.png);}
 
 table.easy tr td form{width:50px!important;}
 table.easy tr td input{background-color:#EEEEEE;background-repeat:no-repeat;background-position:10px 5px;border:1px solid #BFBFBF;color:#222222;cursor:pointer;float:left;font-size:1em;font-weight:bold;line-height:1.3em;margin:0 0 0 10px;padding:5px 10px 5px 25px;text-decoration:none;}
@@ -168,6 +169,8 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .boxactions input.btnclose{background-image:url(/easyclinica/images/icons/cross.png);}
 .boxactions a.btnappointments{background-image:url(/easyclinica/images/icons/appointments.png);}
 .boxactions input.btnappointments{background-image:url(/easyclinica/images/icons/appointments.png);}
+.boxactions a.btnschedule{background-image:url(/easyclinica/images/icons/schedule.png);}
+.boxactions input.btnschedule{background-image:url(/easyclinica/images/icons/schedule.png);}
 
 /*BOX PAGINACAO ######################################################################################################################*/
 .boxpagination{float:left;width:100%;background-color:#EEEEEE;border:#EEEEEE 1px solid;font-size:14px;padding:10px 0;margin:10px 0 20px 0;text-align:center;}
