--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -366,21 +366,23 @@ div.error {
 
 .modal-schedule .modal-content{padding:0 20px;text-align:left;}
 .modal-schedule .modal-content{float:left;}
-.modal-schedule .modal-content div {float:left; width: 100%;margin-top:5px;}
-.modal-schedule .modal-content p{float:left;width:143px;font-weight: bold;}
-.modal-schedule .modal-content span{float:left;}
 .modal-schedule .modal-content fieldset{float:left;width:50%;}
+.modal-schedule .modal-content fieldset p.required span {color:#ff0000;}
 .modal-schedule .modal-content fieldset label{float:left;width:100%;}
 .modal-schedule .modal-content fieldset label.title{float:left;font-weight:bold;margin:10px 0 2px 0;}
 .modal-schedule .modal-content fieldset label.title span{color:#F00;}
 .modal-schedule .modal-content fieldset input, .main .content .box fieldset select, .main .content .box fieldset textarea{float:left;width:200px;padding:4px 6px;border-color:#CCCCCC #DDDDDD #DDDDDD #CCCCCC;border-right:1px solid #DDDDDD;border-style:solid;border-width:2px 1px 1px 2px;}
 .modal-schedule .modal-content fieldset input.radio{float:left;width:auto;margin:0;padding:0;}
 .modal-schedule .modal-content fieldset div{float:left;width:100%;}
-.modal-schedule .modal-content fieldset div label.title{width:100%;}
 .modal-schedule .modal-content fieldset div input{width:90%;}
 .modal-schedule .modal-content fieldset div select{width:90%;}
 .modal-schedule .modal-content fieldset div textarea{width:97%;height:100px;}
 .modal-schedule .modal-content fieldset div input.radio{margin:2px 5px 0 5px;border:none;}
+
+.modal-schedule .modal-content .paleta-cores{float:left;width:60%;}
+.modal-schedule .modal-content .paleta-cores p{float:left; width:15px; height:15px;margin-right:2px;cursor:pointer;}
+.modal-schedule .modal-content .paleta-cores p:hover{opacity:0.7;}
+.modal-schedule .modal-content .cor-selecionada{float:left; width:20px; height:20px;border:solid 1px #000;}
 
 /*END MODAL ######################################################################################################################*/
 
