--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -249,6 +249,11 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box fieldset .search a{background-image:url(/easyclinica/images/icons/search.png);}
 .main .content .box fieldset .search p{float:left;width:100%;color:#999999;margin:0 0 5px 0;}
 
+.main .content .box fieldset .pay-for-room-rate{float:left;}
+.main .content .box fieldset .pay-for-room-rate label{width:auto;}
+.main .content .box fieldset .pay-for-room-rate label.title{width:100%;}
+.main .content .box fieldset .pay-for-room-rate input.radio{margin:2px 5px 0 5px;border:none;}
+
 /*BOX DIREITO ######################################################################################################################*/
 .main .content .boxright{float:left;width:27%;margin:30px 0 0 0;}
 /*BOX DIREITO TEXTOSIMPLES ######################################################################################################################*/
