--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -94,7 +94,7 @@ body{font:12px/1.5em "Lucida Grande","Helvetica Neue",Arial,sans-serif;backgroun
 /*BOX CONTEUDO GERAL ######################################################################################################################*/
 .main .content .box .boxcontent{float:left;width:95.5%;padding:0 20px;background:#FFFFFF;color:#333333;}
 .main .content .box .boxcontent h2{float:left;width:100%;color:#445566;font-size:18px;margin:10px 0 5px 0;}
-.main .content .box .boxcontent p{float:left;width:100%;font-size:12px;line-height:20px;margin:15px 0;}
+.main .content .box .boxcontent p{float:left;width:100%;font-size:12px;line-height:20px;margin:15px 0;color: #000;}
 .main .content .box .boxcontent p span.small{font-size:11px;}
 .main .content .box .boxcontent p span.gray{color:#999999;}
 .main .content .box .boxcontent p span.hightlight{background:#FFFFCC;}
@@ -144,8 +144,22 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box table.tableprocedures tr td input.amount{width:60px}
 .main .content .box table tr td.tablenostyle{background:#ffffff!important;border:none;}
 
+.main .content .box .tableprocedures .procedure-elements li{float:left;}
+.main .content .box .tableprocedures .procedure-elements li > a{display:block;text-indent:-9999px;background-repeat:no-repeat;width:22px;height:22px;padding:2px;cursor:pointer;}
+.main .content .box .tableprocedures .procedure-elements li > a:hover{filter:alpha(opacity=70);opacity:0.7;}
+.main .content .box .tableprocedures .procedure-elements li > a.active{background-color:#fff;}
+.main .content .box .tableprocedures .procedure-elements li a.new-assistant{background-image:url(/easyclinica/images/icons/assistant.png);}
+.main .content .box .tableprocedures .procedure-elements li a.new-material{background-image:url(/easyclinica/images/icons/material.png);}
+.main .content .box .tableprocedures .procedure-elements li a.new-medicine{background-image:url(/easyclinica/images/icons/medicine.png);}
+
 .main .content .box .tableprocedures div.new-assistant{background-color: #FFFFFF;position: absolute;width: 400px;}
 .main .content .box .tableprocedures div.new-assistant fieldset{width:100%;}
+
+.main .content .box .tableprocedures div.new-material{background-color: #FFFFFF;position: absolute;width: 400px;}
+.main .content .box .tableprocedures div.new-material fieldset{width:100%;}
+
+.main .content .box .tableprocedures div.new-medicine{background-color: #FFFFFF;position: absolute;width: 400px;}
+.main .content .box .tableprocedures div.new-medicine fieldset{width:100%;}
 
 /*BOX BOTOES ######################################################################################################################*/
 .boxactions{float:left;width:100%;background-color:#EEEEEE; border:#EEEEEE 1px solid;font-size:14px;padding:10px 0;margin:10px 0;}
@@ -193,7 +207,7 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box fieldset input.radio{float:left;width:auto;margin:0;padding:0;}
 
 .main .content .box fieldset div{float:left;width:100%;}
-.main .content .box fieldset div label.title{width:100%;}
+.main .content .box fieldset div label.title{width:100%;color:#000000;}
 .main .content .box fieldset div input{width:90%;}
 .main .content .box fieldset div select{width:90%;}
 .main .content .box fieldset div textarea{width:97%;height:100px;}
